[package]
name = "repossess"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
eyre = "0.6"
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "fs", "io-util", "process", "signal", "time"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

age = { version = "0.11", features = ["armor"] }
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.66"
aws-credential-types = "1.2"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "cookies"] }
url = "2.5"

chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }

chrono = { version = "0.4", features = ["serde"] }
zstd = "0.13"
tar = "0.4"
bytes = "1.9"
tempfile = "3.14"
urlencoding = "2.1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[dev-dependencies]
wiremock = "0.6"
tempfile = "3.14"
